--- a/css/styles.css
+++ b/css/styles.css
@@ -2,43 +2,51 @@
 
 :root {
     --bg-gray: #ddd;
-    --color-primary: #4d4d4d;
+    --text-gray: #4a4a4a;
+    --color-primary: #4D41C0;
     --white: #fff;
 }
 
-*{
+* {
     margin: 0;
     box-sizing: border-box;
     font-family: 'Open Sans', sans-serif;
 }
 
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     margin: 0;
 }
-html, body {
+
+html,
+body {
     background-color: var(--bg-gray);
 }
-header{
-    background-color:  #4D41C0;
+
+header {
+    background-color: var(--color-primary);
     color: var(--white);
     height: 60px;
-    display:flex;
+    display: flex;
     align-items: center;
 
-    
+
 }
 
 nav {
     display: flex;
-
     align-items: center;
     justify-content: space-between;
 }
 
 nav h1 {
     font-size: 24px;
-    font-weight: 700;   
+    font-weight: 700;
 }
 
 nav a {
@@ -46,19 +54,64 @@ nav a {
     font-weight: 400;
 
 }
-    
+
 
 a, a:hover {
     text-decoration: none;
-    color: unset
-    
+    color: unset;
 }
 
 .dsmovie-contact-container {
-    display: flex
+    display: flex;
     align-items: center;
+    
 }
 
 .dsmovie-contact-container img {
     margin-right: 10px;
+}
+
+#dsmovie-card-list {
+    padding: 40px 0;
+}
+
+.dsmovie-card {
+    width: 360px;
+    
+
+}
+
+.dsmovie-card img {
+    width: 100%;
+    border-radius: 8px 8px 0 0;
+}
+
+.dsmovie-card-description {
+    background-color: var(--white);
+    padding: 10px 0 20px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 0 0 8px 8px;
+}
+
+.dsmovie-card-description h3 {
+    font-size: 14px;
+    font-weight: 700;
+    margin-bottom: 25px;
+}
+
+.dsmovie-btn, .dsmovie-btn:hover  {
+    width: 180px;
+    height: 40px;
+    background-color: var(--color-primary)
+    color: var(--white);
+    font-size: 14px;
+    font-weight: 700;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 4px;
+
+    
 }
